# gittest

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
cmake_deps_prj/: CMakeLists.txt  main.cpp
cmake_simple_prj/: CMakeLists.txt  main.cpp
cmake_superproject/: CMakeLists.txt  rebuild.sh
cmake_superproject/exec_app_1/: CMakeLists.txt
cmake_superproject/exec_app_1/include/: exec_app_1.h
cmake_superproject/exec_app_1/src/: main.cpp
cmake_superproject/exec_app_2/: CMakeLists.txt
cmake_superproject/exec_app_2/include/subdir/: subfile.h
cmake_superproject/exec_app_2/src/: main.cpp
cmake_superproject/lib_header/: CMakeLists.txt
cmake_superproject/lib_header/include/lib_header/: lib_header.h
cmake_superproject/lib_shared/: CMakeLists.txt
cmake_superproject/lib_shared/include/lib_shared/: lib_shared.h
cmake_superproject/lib_shared/src/: lib_shared.cpp
cmake_superproject/lib_static/: CMakeLists.txt
cmake_superproject/lib_static/include/lib_static/: lib_static.h
cmake_superproject/lib_static/src/: lib_static.cpp
